--- a/index.html
+++ b/index.html
@@ -176,9 +176,9 @@
   </header>
 
   <div class="banner" aria-label="Banner Floxeen">
-    <img src="Banner 1.jpg" alt="Banner 1">
-    <img src="Banner 2.jpg" alt="Banner 2">
-    <img src="Banner 3.jpg" alt="Banner 3">
+    <img src="Banner 1.jpeg" alt="Banner 1">
+    <img src="Banner 2.jpeg" alt="Banner 2">
+    <img src="Banner 3.jpeg" alt="Banner 3">
   </div>
 
   <section class="about" id="about">
@@ -209,13 +209,13 @@
   <section class="produk" id="produk">
     <h2>Produk Kami</h2>
     <div class="produk-grid">
-      <div class="produk-card"><img src="Bundling 1.jpg" alt="Bundling 1"><h3>Easy Clean Combo</h3></div>
-      <div class="produk-card"><img src="Bundling 2.jpg" alt="Bundling 2"><h3>Bundle Hemat</h3></div>
-      <div class="produk-card"><img src="Bundling 3.jpg" alt="Bundling 3"><h3>Special Pack</h3></div>
-      <div class="produk-card"><img src="Produk 1.jpg" alt="Produk 1"><h3>All Purpose Cleaner</h3></div>
-      <div class="produk-card"><img src="Produk 2.jpg" alt="Produk 2"><h3>Daily Foam Shampoo</h3></div>
-      <div class="produk-card"><img src="Produk 3.jpg" alt="Produk 3"><h3>Spons & Kit</h3></div>
-      <div class="produk-card"><img src="Produk 4.jpg" alt="Produk 4"><h3>Microfiber Premium</h3></div>
+      <div class="produk-card"><img src="Bundling 1.jpeg" alt="Bundling 1"><h3>Easy Clean Combo</h3></div>
+      <div class="produk-card"><img src="Bundling 2.jpeg" alt="Bundling 2"><h3>Bundle Hemat</h3></div>
+      <div class="produk-card"><img src="Bundling 3.jpeg" alt="Bundling 3"><h3>Special Pack</h3></div>
+      <div class="produk-card"><img src="Produk 1.jpeg" alt="Produk 1"><h3>All Purpose Cleaner</h3></div>
+      <div class="produk-card"><img src="Produk 2.jpeg" alt="Produk 2"><h3>Daily Foam Shampoo</h3></div>
+      <div class="produk-card"><img src="Produk 3.jpeg" alt="Produk 3"><h3>Spons & Kit</h3></div>
+      <div class="produk-card"><img src="Produk 4.jpeg" alt="Produk 4"><h3>Microfiber Premium</h3></div>
     </div>
   </section>
 
